Extract methods to request handler